admission_controller/admission_bundle.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: redb-admission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-deploy
spec:
  selector:
    matchLabels:
      app: redb-admission
  template:
    metadata:
      labels:
        app: redb-admission
    spec:
      serviceAccountName: redis-enterprise-admission
      containers:
      - name: admin
        image: redislabs/operator-internal:100.0.0-277
        command:
        - /usr/local/bin/admission
        args:
        - '-v=0'
        imagePullPolicy: Always
        ports:
        - containerPort: 443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: redb-admission
webhooks:
- name: redb.admission.redislabs
  failurePolicy: Fail
  rules:
  - apiGroups:   ["app.redislabs.com"]
    apiVersions: ["v1alpha1"]
    operations:  ["*"]
    resources:   ["redisenterprisedatabases"]
  clientConfig:
    service:
      namespace: automation-1
      name: admission
      path: /admission
    caBundle: <FILL ME IN>
---
